--- a/web/application/templates/exercise_group.html
+++ b/web/application/templates/exercise_group.html
@@ -37,7 +37,7 @@
 			<br>
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
-				<a href="{{ url_for('exerciselist', level='Iniciante') }}"><img src="{{ url_for('static', filename='images/number_one.png') }}" alt="" height="70" width="70"></a>
+				<a href="{{ url_for('exerciselist', level='Iniciante') }}"><img src="{{ url_for('static', filename='images/1.png') }}" alt="" height="70" width="70"></a>
 				<p><b>Nível Iniciante:</b></p>
 				<p>Variáveis e Constantes, Tipos de Dados, Estruturas de Decisão e Repetição, etc.</p>
 			</div>
@@ -49,7 +49,7 @@
 			<br>
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
-				<a href="{{ url_for('exerciselist', level='Intermediario') }}" ><img src="{{ url_for('static', filename='images/number_two.png') }}" alt="" height="70" width="70"></a>
+				<a href="{{ url_for('exerciselist', level='Intermediario') }}" ><img src="{{ url_for('static', filename='images/2.png') }}" alt="" height="70" width="70"></a>
 				<p><b>Nível intermediário:</b></p>
 				<p>Vetores, Matrizes, Ordenação, Funções, etc.</p>
 			</div>
@@ -61,7 +61,7 @@
 			<br>
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
-				<a href="{{ url_for('exerciselist', level='Avancado') }}"><img src="{{ url_for('static', filename='images/number_three.png') }}" alt="" height="70" width="70"></a>
+				<a href="{{ url_for('exerciselist', level='Avancado') }}"><img src="{{ url_for('static', filename='images/3.png') }}" alt="" height="70" width="70"></a>
 				<p><b>Nível avançado:</b></p>
 				<p>Algoritmos, Alocação de Memória, Ponteiros, Funções recursicas, etc.</p>
 			</div>
