--- a/web/application/templates/presentation.html
+++ b/web/application/templates/presentation.html
@@ -16,7 +16,7 @@
 
 		<br>
 
-		<label style="font-size: 40px;">{{ current_user.name.title() }}, responda os questionamentos abaixo para que nós possamos definir um roteiro de estudos para você.</label>
+		<label style="font-size: 40px;">{{ current_user.name.title() }}, responda as próximas perguntas para que nós possamos definir um roteiro de estudos para você.</label>
 
 		<br><br>
 
