--- a/web/application/templates/base_index.html
+++ b/web/application/templates/base_index.html
@@ -37,11 +37,11 @@
         <ul class="navbar-nav">
 
           <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('judges') }}">Code!<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Code!<span class="sr-only">(current)</span></a>
           </li>
 
           <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('studies') }}">Estudos <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Estudos <span class="sr-only">(current)</span></a>
           </li>
 
           <!--<li class="nav-item active">
