--- a/web/application/templates/interactive_study_explanation.html
+++ b/web/application/templates/interactive_study_explanation.html
@@ -160,7 +160,7 @@
 
 		<div style="width: 100%; margin: auto; text-align: center;">
 
-			<form action="{{ url_for('interactivestudy') }}" method="GET">
+			<form action="{{ url_for('studyplan') }}" method="GET">
 
 				<input class="button_default btnInteractiveStudySubmit" type="submit" value="Avançar">
 
