--- a/web/application/templates/status_explanation.html
+++ b/web/application/templates/status_explanation.html
@@ -12,11 +12,11 @@
 
 	<br><br>
 
-	<p style="width: 90%; margin: auto; text-align: center; font-size: 34px;">Nós possuímos <b>cinco tipos de resultados </b> para os exercícios submetidos, sendo estes:</p>
+	<p style="width: 90%; margin: auto; text-align: center; font-size: 44px;">Nós possuímos <b>cinco tipos de resultados </b> para os exercícios submetidos, sendo estes:</p>
 
 	<br><br>
 
-	<div style="width: 40%; margin: auto; font-size: 24px; text-align: center;">
+	<div style="width: 45%; margin: auto; font-size: 28px; text-align: center;">
 
 		<ul>
 
@@ -40,78 +40,82 @@
 
 	<p style="text-align: center; font-size: 34px;">Ok. Vamos lá a explicação:</p>
 
-	<ul>
+	<div style="width: 100%;">
 
-		<li style="font-size: 24px;">Status 1</li>
+		<ul>
 
-		<div style="background-color: #FFFF00;">
+			<li style="font-size: 30px;">Status 1</li>
 
-			<hr class="style">
+			<div style="background-color: #FFFF00;">
 
-			<p style="font-size: 20px; text-align: center;">Status mais básico entre os outros. Neste, contém os erros mais comuns de programação. Erro de sintaxe, compilação, etc.</p>
+				<hr class="style">
 
-			<hr class="style">
+				<p style="font-size: 24px; text-align: center;">Status mais básico entre os outros. Neste, contém os erros mais comuns de programação. Erro de sintaxe, compilação, etc.</p>
 
-		</div>
+				<hr class="style">
 
-		<br>
+			</div>
 
-		<li style="font-size: 24px;">Status 2</li>
+			<br>
 
-		<div style="background-color: #fc0511">
+			<li style="font-size: 30px;">Status 2</li>
 
-			<hr class="style">
+			<div style="background-color: #fc0511">
 
-			<p style="font-size: 20px; text-align: center;">Aconteçe quando o resultado enviado pelo código do usuário não está igual ao código esperado pelo nosso sistema.</p>
+				<hr class="style">
 
-			<hr class="style">
+				<p style="font-size: 24px; text-align: center;">Ocorre quando o resultado enviado pelo código do usuário não está igual ao código esperado pelo nosso sistema.</p>
 
-		</div>
+				<hr class="style">
 
-		<br>
+			</div>
 
-		<li style="font-size: 24px;">Status 3</li>
+			<br>
 
-		<div style="background-color: #1E90FF;">
+			<li style="font-size: 30px;">Status 3</li>
 
-			<hr class="style">
+			<div style="background-color: #1E90FF;">
 
-			<p style="font-size: 20px; text-align: center;">Acontece quando o código do usuário ultrapassa o tempo limite definido para a compilação desse código.</p>
+				<hr class="style">
 
-			<hr class="style">
+				<p style="font-size: 24px; text-align: center;">Ocorre quando o código do usuário ultrapassa o tempo limite definido para a compilação desse código.</p>
 
-		</div>
+				<hr class="style">
 
-		<br>
+			</div>
 
-		<li style="font-size: 24px;">Status 4</li>
+			<br>
 
-		<div style="background-color: #90EE90;">
+			<li style="font-size: 30px;">Status 4</li>
 
-			<hr class="style">
+			<div style="background-color: #90EE90;">
 
-			<p style="font-size: 20px; text-align: center;">Aconteçe quando a resposta enviada pelo código do usuário contém formatações indevidas.</p>
+				<hr class="style">
 
-			<hr class="style">
+				<p style="font-size: 24px; text-align: center;">Ocorre quando a resposta enviada pelo código do usuário contém formatações indevidas (espaços a mais, a menos, falta do caractér de retorno de linha).</p>
 
-		</div>
+				<hr class="style">
 
-		<br>
+			</div>
 
-		<li style="font-size: 24px;">Status 5</li>
+			<br>
 
-		<div style="background-color: #32CD32;">
+			<li style="font-size: 30px;">Status 5</li>
 
-			<hr class="style">
+			<div style="background-color: #32CD32;">
 
-			<p style="font-size: 20px; text-align: center;">Status referente ao acerto do código enviado pelo usuário para cumprimento da saída esperada.</p>
+				<hr class="style">
 
-			<hr class="style">
+				<p style="font-size: 24px; text-align: center;">Status referente ao acerto do código enviado pelo usuário, pegando as entradas da maneira correta, gerando a(s) saída(s) esperada(s).</p>
 
-		</div>
+				<hr class="style">
 
-		<br>
+			</div>
 
-	</ul>
+			<br>
+
+		</ul>
+
+	</div>
 
 {% endblock %}
