--- a/web/application/templates/system_board_main.html
+++ b/web/application/templates/system_board_main.html
@@ -37,7 +37,7 @@
 			<br>
 
 			<div style="text-align: center; padding: 10px; font-size: 18px;">
-				<a href="{{ url_for('rules') }}"><img class="action" src="{{ url_for('static', filename='images/main.png') }}" alt="" height="70" width="70"></a>
+				<a href="{{ url_for('why_svoj') }}"><img class="action" src="{{ url_for('static', filename='images/main.png') }}" alt="" height="70" width="70"></a>
 				<p>Saiba o <b>"Por quê"</b> do projeto <b>Seven Online Judge!</b></p>
 			</div>
 
