--- a/web/application/templates/base_index.html
+++ b/web/application/templates/base_index.html
@@ -37,16 +37,16 @@
         <ul class="navbar-nav">
 
           <li class="nav-item active">
-            <a class="nav-link" href="#">Code!<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Código!<span class="sr-only">(current)</span></a>
           </li>
 
           <li class="nav-item active">
-            <a class="nav-link" href="#">Estudos <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Estudo! <span class="sr-only">(current)</span></a>
           </li>
 
-          <!--<li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('statistics') }}">Estatísticas <span class="sr-only">(current)</span></a>
-          </li>-->
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Estatística! <span class="sr-only">(current)</span></a>
+          </li>
 
         </ul>
 
